# slamsystems

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  vcpkg.json
cpp/include/foundation/: types.hpp
cpp/include/foundation/dbow/: dbow.hpp  python.hpp
cpp/include/foundation/depth_slam/: depth_slam.hpp  python.hpp
cpp/include/foundation/oak_slam/: ID.hpp  map.hpp  oak_slam.hpp  orb.hpp  python.hpp  rerun_logger.hpp  tracker.hpp  triangulation.hpp  type_defs.hpp  visualizer.hpp
cpp/include/foundation/optim/g2o/: edges.hpp  vertices.hpp
cpp/include/foundation/optim/symforce/: conversion.hpp  default_opt_params.hpp
cpp/include/foundation/pose_graph/: pose_graph.hpp  python.hpp
cpp/include/foundation/reinventing/: icp_ceres.hpp  icp_g2o.hpp  poly_fit_ceres.hpp  poly_fit_g2o.hpp  solve_pnp_ceres.hpp  solve_pnp_g2o.hpp
cpp/include/foundation/spatial/: lie_algebra.hpp  python.hpp
cpp/include/foundation/symforce_exercises/: pose_graph.hpp  tag_slam.hpp
cpp/include/foundation/symforce_generated/circle_pose_graph/cpp/symforce/circle_pose_graph/: pose_diff_factor.h
cpp/include/foundation/symforce_generated/general_factors/cpp/symforce/general_factors/: depth_factor.h  point_reprojection_factor.h
cpp/include/foundation/symforce_generated/tag_slam/cpp/symforce/tag_slam_factors/: tag_reprojection_error_factor.h
cpp/include/foundation/tag_slam/: python.hpp  tag_slam.hpp
cpp/include/foundation/utils/: camera.hpp  conversion.hpp  fbow.hpp  image.hpp  math.hpp  numpy.hpp  python.hpp  python_utils.hpp  rerun.hpp  thread_queue.hpp  thread_value.hpp
cpp/src/: CMakeLists.txt  python.cpp
cpp/src/dbow/: python.cpp
cpp/src/depth_slam/: python.cpp
cpp/src/oak_slam/: orb.cpp  python.cpp  rerun_logger.cpp  triangulation.cpp
cpp/src/optim/g2o/: edges.cpp  vertices.cpp
cpp/src/optim/symforce/: conversion.cpp
cpp/src/pose_graph/: python.cpp
cpp/src/reinventing/: icp_ceres.cpp  icp_g2o.cpp  poly_fit_ceres.cpp  poly_fit_g2o.cpp  solve_pnp_ceres.cpp  solve_pnp_g2o.cpp
cpp/src/spatial/: lie_algebra.cpp  python.cpp
cpp/src/tag_slam/: python.cpp
cpp/src/utils/: camera.cpp  image.cpp  numpy.cpp  python.cpp  rerun.cpp
data/bow_vocab/: vocab.vocab
data/view_pairs/1/view1/: depth.tiff
data/view_pairs/1/view2/: depth.tiff
data/view_pairs/2/view1/: depth.tiff  intrinsics.json
data/view_pairs/2/view2/: depth.tiff
data/view_pairs/3/view1/: depth.tiff
data/view_pairs/3/view2/: depth.tiff
data/view_pairs/4/view1/: depth.tiff
data/view_pairs/4/view2/: depth.tiff
notebooks/: ceres_pnp_from_scratch.py  chapter3_problem5.py  circle_pose_graph_BA.py  circle_pose_graph_BA_codegen.py  depth_slam.py  direct_method.py  gauss_newton_curve_fit.py  generate_symforce_factors.py  icp.py  live_visual_odometry.py  make_views.py  oak_d_slam.py  optical_flow.py  planage_shed_ba.py  plantage_shed_ba_from_scratch.py  plantage_shed_slam.py  plantage_shed_slam_no_dense.py  pnp_motion_estimation.py  realsense_feature_detectors.py  simple_slam_vo_only.py  symforce_test.py  test_bow.py  test_ceres_reinvent.py  test_sophus.py  trajectory_error.py  triangulation.py  video_capture.py  visualize_trajectory.py
patches/: symforce_assert.patch
scripts/: viser_test.py
src/project/: type_defs.py
src/project/camera_readers/: realsense.py
src/project/depth_slam/: __init__.py  backend.py  data_types.py
src/project/experimental/: generate_trajectory.py
src/project/foundation/: __init__.pyi  dbow.pyi  depth_slam.pyi  oak_slam.pyi  pose_graph.pyi  reinventing.pyi  spatial.pyi  symforce_exercises.pyi  tag_slam.pyi  utils.pyi
src/project/foundation/symforce_exercises/: __init__.pyi  depth_slam.pyi
src/project/oak_slam/: pipeline.py
src/project/tag_slam/default/: __init__.py
src/project/tag_slam/epipolar_line_search/: __init__.py  epipolar_search_depth_estimator.py  make_residual.py
src/project/utils/: colors.py  drawing.py  features.py  optical_flow.py  paths.py  pnp.py  pypose_utils.py  triangulation.py
src/project/utils/camera/: __init__.py  camera_params.py  mvg.py  video.py  view.py
src/project/utils/depth_estimation/: block_search.py
src/project/utils/image/: __init__.py  filters.py
src/project/utils/jupyter/: __init__.py
src/project/utils/markers/: __init__.py
src/project/utils/pointclouds/: align.py
src/project/utils/rerun_utils/: __init__.py
src/project/utils/spatial/: __init__.py  pose.py  symbolic.py  vec.py
src/project/utils/symforce_utils/: __init__.py  factors.py
src/project/utils/viser_utils/: __init__.py
src/project/visual_odometry/: motion_estimation.py  orb_basic.py
tests/utils/: test_pointclouds.py
tests/utils/spatial/: test_pose.py
tools/: build.py  build_deps.py  install_symforce.sh  run_clang_format.py
